# cli-pass-manager

./: .gitignore  Cargo.toml  README.md  SPEC.md
scripts/: setup.sh
src/: cli.rs  error.rs  lib.rs  main.rs  output.rs  vault.rs
tests/: cli_contract.rs
