[package]
name = "freaky-vault"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10"
argon2 = "0.5"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
clap = { version = "4.5", features = ["derive"] }
colored = "3"
dirs = "6"
fs2 = "0.4"
is-terminal = "0.4"
rpassword = "7"
rustyline = "14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
zeroize = "1"

[dev-dependencies]
tempfile = "3"
